[project]
name = "image-eval-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "image-similarity-measures>=0.3.5",
    "matplotlib>=3.10.7",
    "opencv-python-headless>=4.12.0.88",
    "plotly>=6.5.0",
    "scikit-image>=0.25.2",
    "streamlit-image-comparison>=0.0.4",
    "streamlit-image-coordinates>=0.4.0",
    "streamlit>=1.51.0",
]
